<resources>
    <string name="app_name">UTSPPB1</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="ingat_saya">Ingat Saya</string>
    <string name="favorite"></string>
    <string name="search"></string>
    <string name="more"></string>
    <string name="Search"></string>
    <string name="Favorite"></string>
    <string name="More"></string>
    <string name="action_settings">Settings</string>
    <string name="selamat_datang">Selamat Datang,</string>
    <string name="apa_itu_airsoft">Apa itu Airsoft?</string>
    <string name="lihat_selengkapnya">Lihat Selengkapnya</string>
    <string name="airsoft_adalah_sebuah_olahraga_ketagkasan_yang_menggunakan_replika_senjata_api">Airsoft adalah sebuah olahraga ketagkasan yang menggunakan replika senjata api.</string>
    <string name="unit_airsoft_rekomendasi">Unit Airsoft Rekomendasi</string>
    <string name="berikut_adalah_rekomendasi_unit_airsoft_untuk_pemula_yang_baru_terjun_ke_dunia_airsoft">Berikut adalah rekomendasi unit airsoft untuk pemula yang baru terjun ke dunia airsoft</string>
    <string name="unit_name">Unit Name</string>
    <string name="unit_type">Unit Type</string>
    <string name="unit_fps">Unit FPS</string>
    <string name="unit_price">Unit Price</string>

</resources>