<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp">
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginEnd="16dp"
        android:id="@+id/img_item_photo"
        tools:src="@tools:sample/avatars"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_item_name"
            android:layout_marginBottom="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="@string/unit_name"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_item_type"
            android:ellipsize="end"
            android:maxLines="10"
            android:textAlignment="gravity"
            android:text="@string/unit_type"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_item_fps"
            android:ellipsize="end"
            android:maxLines="10"
            android:textAlignment="gravity"
            android:text="@string/unit_fps"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_item_price"
            android:ellipsize="end"
            android:maxLines="10"
            android:textAlignment="gravity"
            android:text="@string/unit_price"/>
    </LinearLayout>

</LinearLayout>