<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:layout_marginTop="20dp"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:src="@drawable/logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
            android:textSize="50sp"
            android:layout_marginBottom="10dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="600dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/username"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_person">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtuname"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="600dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/password"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_password">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/txtpass"/>


        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/cbkingat"
            android:layout_width="600dp"
            android:layout_height="wrap_content"
            android:text="@string/ingat_saya"
            style="@style/GreenText"/>

        <Button
            android:id="@+id/btnLogin1"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="600dp"
            android:layout_height="74dp"
            android:layout_marginBottom="100dp"
            android:paddingLeft="100dp"
            android:paddingRight="120dp"
            android:text="@string/login"
            app:icon="@drawable/ic_login" />

        <TextView
            android:id="@+id/txtuname1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"/>
    </LinearLayout>


</LinearLayout>