<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity"
    android:orientation="vertical">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="AirSoft Pedia"
            app:menu="@menu/top_app_bar"
            app:navigationIcon="@drawable/ic_menu"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            />

    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="550dp">
        <TextView
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:text="@string/selamat_datang"
            android:textColor="@color/hijautua"/>
        <TextView
            android:id="@+id/txtsessions1"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:textColor="@color/hijautua"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        >
        <com.google.android.material.card.MaterialCardView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/cvFav"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_lightbulb"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center"
                    android:contentDescription=""
                    android:layout_marginBottom="10dp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:padding="5dp"
                    android:background="@color/hijautuapucat2"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/apa_itu_airsoft"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:id="@+id/txtfav"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/airsoft_adalah_sebuah_olahraga_ketagkasan_yang_menggunakan_replika_senjata_api"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text=""
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary"
                        />
                    <Button
                        android:id="@+id/btnApa"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lihat_selengkapnya"/>
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/cvJenis"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_lightbulb"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center"
                    android:contentDescription=""
                    android:layout_marginBottom="10dp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:padding="5dp"
                    android:background="@color/hijautuapucat2"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Jenis-jenis Airsoft"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:id="@+id/jenis"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="Airsoft memiliki beragam jenis, yang paling utama terdapat Spring, AEG dan GBB/R dan menggunakan peluru plastik 6mm. "
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text=""
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary"
                        />
                    <Button
                        android:id="@+id/btnJenis"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lihat_selengkapnya"/>
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        >
        <com.google.android.material.card.MaterialCardView
            android:layout_width="620dp"
            android:layout_height="wrap_content"
            android:id="@+id/cvUnit"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_lightbulb"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center"
                    android:contentDescription=""
                    android:layout_marginBottom="10dp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:padding="5dp"
                    android:background="@color/hijautuapucat2"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/unit_airsoft_rekomendasi"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:id="@+id/txtunit"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/berikut_adalah_rekomendasi_unit_airsoft_untuk_pemula_yang_baru_terjun_ke_dunia_airsoft"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text=""
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary"
                        />
                    <Button
                        android:id="@+id/btnUnit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lihat_selengkapnya"/>
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu="@menu/bottom_navigation_menu"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
</LinearLayout>